<resources>
    <string name="app_name">CSquare</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="username_empty">Username should not be empty</string>
    <string name="password_empty">Password should not be empty</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_auth_failed">Login authentication failed</string>
    <string name="error_internet">Internet is not available</string>
    <string name="email_address">Email Address</string>
    <string name="total_user_count">Total User Count :</string>
    <string name="error_try_again">Error try again later</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="email_id">Email Id :</string>
</resources>
